// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates correct metadata for: > dynamic route 1`] = `
{
  "canonical": undefined,
  "description": "View transaction 0x12345 on Blockscout (Blockscout) Explorer",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Blockscout transaction 0x12345 | VinuExplorer",
  },
  "siteJsonLd": undefined,
  "title": "Blockscout transaction 0x12345 | VinuExplorer",
}
`;

exports[`generates correct metadata for: > dynamic route with API data 1`] = `
{
  "canonical": undefined,
  "description": "0x12345, balances and analytics on the Blockscout (Blockscout) Explorer",
  "jsonLd": {
    "@context": "https://schema.org",
    "@type": "Product",
    "brand": {
      "@type": "Brand",
      "name": "Tether",
    },
    "description": "USDT is a stablecoin",
    "image": "https://example.com/usdt.png",
    "name": "USDT",
    "offers": {
      "@type": "Offer",
      "availability": "InStock",
      "price": "1.00",
      "priceCurrency": "USD",
      "priceValidUntil": "2024-01-02T00:00:00.000Z",
    },
    "productID": "0x12345",
    "url": "http://localhost:3000/token/0x12345",
  },
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Blockscout USDT token details | VinuExplorer",
  },
  "siteJsonLd": undefined,
  "title": "Blockscout USDT token details | VinuExplorer",
}
`;

exports[`generates correct metadata for: > static route 1`] = `
{
  "canonical": "http://localhost:3000/txs",
  "description": "VinuExplorer is the official explorer for VinuChain, the world's first determinably feeless EVM, L1.",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Blockscout transactions - Blockscout explorer | VinuExplorer",
  },
  "siteJsonLd": undefined,
  "title": "Blockscout transactions - Blockscout explorer | VinuExplorer",
}
`;
